# mcp-pypandoc-hwpx

./: .gitignore  Dockerfile  LICENSE  README.md  azure.yaml  pyproject.toml
.devcontainer/: devcontainer.json  on-create.sh
.github/workflows/: build-container.yaml  build.yaml
infra/: main.bicep  main.parameters.json  resources.bicep
src/: blob.py  server.py
