[project]
name = "mcp-pypandoc-hwpx"
version = "0.1.0"
description = "MCP server for pypandoc-hwpx: convert .docx, .html, and .md files to .hwpx format"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "mcp[cli]>=1.26.0",
    "pypandoc-hwpx>=0.1.1",
]

[project.scripts]
mcp-pypandoc-hwpx = "src.server:main"
