[project]
name = "mcp-pypandoc-hwpx"
version = "0.1.0"
description = "MCP server for pypandoc-hwpx: convert .docx, .html, and .md files to .hwpx format"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "azure-identity>=1.21.0",
    "azure-storage-blob>=12.25.0",
    "httpx>=0.28.0",
    "mcp[cli]>=1.26.0",
    "pypandoc-hwpx>=0.1.1",
]

[project.scripts]
mcp-pypandoc-hwpx = "src.server:main"
